--- a/WatchKit SampleApp/WatchKit SampleApp Watch App/Interface.storyboard
+++ b/WatchKit SampleApp/WatchKit SampleApp Watch App/Interface.storyboard
@@ -10,24 +10,22 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController">
                     <items>
-                        <label alignment="center" verticalAlignment="center" text="Hello World!" textAlignment="center" id="zov-Pt-ZYb"/>
+                        <imageView alignment="center" image="sunny" id="KK8-aT-DxT"/>
+                        <separator alignment="left" id="PSs-jv-TVI"/>
+                        <label alignment="center" text="Weather Outside" id="5qS-q0-keh"/>
+                        <slider width="1" alignment="left" value="0.5" steps="2" id="d1h-qe-aBX"/>
+                        <group width="1" alignment="left" hasDetent="YES" id="kyb-c7-WVF">
+                            <items>
+                                <label alignment="left" text="Sunny" id="pwK-Mv-VvL"/>
+                                <label alignment="right" text="Rainy" id="dIS-NP-2Ot"/>
+                            </items>
+                        </group>
+                        <switch width="1" alignment="left" value="YES" title="Refresh" id="AQR-lD-19U"/>
+                        <button width="1" alignment="left" title="Settings" id="T7S-ku-hSz"/>
                     </items>
                 </controller>
             </objects>
             <point key="canvasLocation" x="235" y="347"/>
-        </scene>
-        <!--Glance Interface Controller-->
-        <scene sceneID="BOz-TT-tkC">
-            <objects>
-                <glanceController spacing="0.0" id="0uZ-2p-rRc" customClass="GlanceController">
-                    <items>
-                        <group alignment="left" id="t8f-Gd-c4y"/>
-                        <group alignment="left" id="uCw-4Q-Ouw"/>
-                    </items>
-                    <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="14"/>
-                </glanceController>
-            </objects>
-            <point key="canvasLocation" x="235" y="672"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
